# lenovo-vantage

./: .gitlab-ci.yml  Cargo.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.wizard28.LenovoVantage.Devel.json
data/: com.github.wizard28.LenovoVantage.desktop.in.in  com.github.wizard28.LenovoVantage.gschema.xml.in  com.github.wizard28.LenovoVantage.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: resources.gresource.xml
i18n/bn/: lenovo_vantage.ftl
i18n/en/: lenovo_vantage.ftl
src/: app.rs  config.rs.in  localize.rs  main.rs  meson.build  setup.rs
src/components/: preferences.rs
src/modals/: about.rs
