[package]
name = "lenovo-vantage"
version = "0.1.0"
authors = ["wizard-28 <wiz28@protonmail.com>"]
edition = "2021"
publish = false

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.5.0-beta.4", features = ["libadwaita"] }
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
once_cell = "1.16.0"
rust-embed = "6.4.2"
strum = { version = "0.24.1", features = ["derive"] }
